--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
         <link rel="stylesheet" href="style.css" >
     </head>
     <body>
+        <h1 class="h1">Table</h1>
         <table>
             <tr>
-                <th>1</th>
-                <th>2</th>
-                <th>3</th>
+                <th>Name</th>
+                <th>StudentId</th>
+                <th>Age</th>
+            </tr> 
+            <tr>
+                <td>rishi</td>
+                <td>765575</td>
+                <td>20</td>
             </tr>
             <tr>
-                <th>4</th>
-                <th>5</th>
-                <th>6</th>
-            </tr>
-            <tr>
-                <th>7</th>
-                <th>8</th>
-                <th>9</th>
-            </tr>
+                <td>aman</td>
+                <td>436463</td>
+                <td>21</td>
+             </tr>
+             <tr>
+                    <td>biplob</td>
+                    <td>4745672</td>
+                    <td>20</td>
+                 </tr>
         </table>
     </body>
 </html>
