--- a/index.html
+++ b/index.html
@@ -1,32 +1,63 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
-        <title></title>
+        <title>table</title>
         <link rel="stylesheet" href="style.css" >
     </head>
     <body>
+        <div class=con>
         <h1 class="h1">Table</h1>
+        </div>
+        <hr>
         <table>
             <tr>
                 <th>Name</th>
                 <th>StudentId</th>
                 <th>Age</th>
+                <th colspan="2">Phone Number</th>
+                <th>Email Address</th>
             </tr> 
             <tr>
                 <td>rishi</td>
                 <td>765575</td>
                 <td>20</td>
+                <td>565436575</td>
+                <td>565436375</td>
+                <td>fjhrbgish@gmai.com</td>
             </tr>
             <tr>
                 <td>aman</td>
                 <td>436463</td>
                 <td>21</td>
+                <td>478549462</td>
+                <td>463546436</td>
+                <td>fjhgfish@gmai.com</td>
              </tr>
              <tr>
                     <td>biplob</td>
                     <td>4745672</td>
                     <td>20</td>
-                 </tr>
+                    <td>565754764</td>
+                    <td>537484754</td>
+                    <td>fguyvbfiu@gmail.com</td>
+            </tr>
+            <tr>
+                        <td>nil</td>
+                        <td>436463</td>
+                        <td>21</td>
+                        <td>573542735</td>
+                        <td>753573877</td>
+                        <td>hgbrwjhnj@gmail.com</td>
+            </tr>
+            <tr>
+                            <td>preet</td>
+                            <td>436463</td>
+                            <td>21</td>
+                            <td>72472848</td>
+                            <td>58385888</td>
+                            <td>eijgtnjlkr@gmail.com</td>
+             </tr>
         </table>
+        
     </body>
 </html>
